# mcp-code-review

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-04-10-mcp-code-review-plan.md
docs/specs/: 2026-04-10-mcp-code-review-design.md
skills/code-review-mcp/: SKILL.md
src/mcp_code_review/: __init__.py  conventions.py  locale.py  models.py  report.py  server.py
src/mcp_code_review/analyzers/: __init__.py  bandit.py  base.py  ruff.py
src/mcp_code_review/providers/: __init__.py  base.py  git_local.py  github.py  gitlab.py
tests/: conftest.py  test_conventions.py  test_models.py  test_report.py
tests/fixtures/: sample_codereview.yml  sample_mr_response.json  sample_pr_response.json
tests/test_analyzers/: test_bandit.py  test_ruff.py
tests/test_providers/: test_git_local.py  test_github.py  test_gitlab.py
