[project]
name = "mcp-code-review"
version = "0.1.0"
description = "MCP server for LLM-powered code review — GitHub PRs, GitLab MRs, local diffs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Maurizio Mocci"}
]
keywords = ["mcp", "code-review", "github", "gitlab", "llm", "ai"]

dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
python = [
    "ruff>=0.4.0",
    "bandit>=1.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcp-code-review = "mcp_code_review.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_code_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
